force-app/main/default/objects/Work_Record_Group_Access_Policy__c/Work_Record_Group_Access_Policy__c.object-meta.xml
<CustomObject>
    <label>Work Record Group Access Policy</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Record Group Access Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Record Group Access Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>