force-app/main/default/objects/Work_Record_Group_Access_Policy__c/fields/Engagement_Group__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Engagement Group</label>
    <referenceTo>Client_Engagement_Group__c</referenceTo>
    <relationshipLabel>Work Record Group Access Policies</relationshipLabel>
    <relationshipName>Work_Record_Group_Access_Policies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>