force-app/main/default/objects/Work_Record_Group_Access_Policy__c/fields/Work_Record__c.field-meta.xml
<CustomField>
    <fullName>Work_Record__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Record</label>
    <referenceTo>Work_Record__c</referenceTo>
    <relationshipLabel>Work Record Group Access Policies</relationshipLabel>
    <relationshipName>Work_Record_Group_Access_Policies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>